--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,7 +1,7 @@
 .header {
   display: flex;
   align-items: center;
-
+  box-shadow: -1px 5px 2px -5px rgba(0, 0, 0, 0.5);
   background-color: rgb(255, 248, 248);
   position: fixed;
   top: 0px;
